--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Международная школа терапевтического вокала Рады Аубакировой</title>
 
-    <!-- Подключаем аккуратные шрифты: заголовки — Playfair Display (премиальный), текст — Inter -->
+    <!-- Подключаем аккуратные шрифты: заголовки — Montserrat, текст — Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
     
@@ -36,7 +37,7 @@
         }
 
         .rv-logo {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Montserrat', sans-serif;
             font-size: 24px;
             font-weight: 600;
             color: #2c3e50;
@@ -246,22 +247,22 @@
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">📚</div>
-                    <h3>Авторская методика Рады Аубакировой</h3>
+                    <h3 class="card-title">Авторская методика Рады Аубакировой</h3>
                     <p>Каждый педагог обучен лично Радой и работает по её терапевтическому подходу.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🎓</div>
-                    <h3>Сертифицированные преподаватели</h3>
+                    <h3 class="card-title">Сертифицированные преподаватели</h3>
                     <p>Команда экспертов, прошедших глубокую подготовку.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">💫</div>
-                    <h3>Голос + тело + психика</h3>
+                    <h3 class="card-title">Голос + тело + психика</h3>
                     <p>Мы работаем не только с техникой, но и с эмоциями, зажимами и уверенностью.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🌍</div>
-                    <h3>Результаты учеников по всему миру</h3>
+                    <h3 class="card-title">Результаты учеников по всему миру</h3>
                     <p>Тысячи трансформаций: сильный голос, свобода сцены и уверенность.</p>
                 </div>
             </div>
@@ -274,8 +275,8 @@
             <h2 class="section-title">Терапевтический вокал — курсы</h2>
             <div class="courses-grid">
                 <div class="course-card premium">
-                    <h3>Премиум формат (индивидуально)</h3>
-                    <div class="price">990,000 ₸</div>
+                    <h3 class="course-title">Премиум формат (индивидуально)</h3>
+                    <div class="price course-price">990,000 ₸</div>
                     <ul class="course-features">
                         <li>• Максимальное внимание</li>
                         <li>• Дыхание, подача, диапазон</li>
@@ -286,8 +287,8 @@
                 </div>
 
                 <div class="course-card">
-                    <h3>VIP группа (до 5 человек)</h3>
-                    <div class="price">495,000 ₸</div>
+                    <h3 class="course-title">VIP группа (до 5 человек)</h3>
+                    <div class="price course-price">495,000 ₸</div>
                     <ul class="course-features">
                         <li>• Почти индивидуальная работа</li>
                         <li>• Психология голоса</li>
@@ -298,8 +299,8 @@
                 </div>
 
                 <div class="course-card">
-                    <h3>Группа (до 10)</h3>
-                    <div class="price">350,000 ₸</div>
+                    <h3 class="course-title">Группа (до 10)</h3>
+                    <div class="price course-price">350,000 ₸</div>
                     <ul class="course-features">
                         <li>• Рост вместе</li>
                         <li>• Преодоление барьеров</li>
@@ -309,8 +310,8 @@
                 </div>
 
                 <div class="course-card">
-                    <h3>Пары</h3>
-                    <div class="price">1,200,000 ₸</div>
+                    <h3 class="course-title">Пары</h3>
+                    <div class="price course-price">1,200,000 ₸</div>
                     <ul class="course-features">
                         <li>• Гармония голоса</li>
                         <li>• Творческий путь вместе</li>
@@ -320,8 +321,8 @@
                 </div>
 
                 <div class="course-card featured">
-                    <h3>Полный курс — Максимальная трансформация</h3>
-                    <div class="price">2,200,000 ₸</div>
+                    <h3 class="course-title">Полный курс — Максимальная трансформация</h3>
+                    <div class="price course-price">2,200,000 ₸</div>
                     <ul class="course-features">
                         <li>• Полная программа</li>
                         <li>• Индивидуальная траектория</li>
@@ -331,8 +332,8 @@
                 </div>
 
                 <div class="course-card">
-                    <h3>Одна сессия</h3>
-                    <div class="price">108,000 ₸</div>
+                    <h3 class="course-title">Одна сессия</h3>
+                    <div class="price course-price">108,000 ₸</div>
                     <ul class="course-features">
                         <li>• Попробуйте работу с педагогом</li>
                     </ul>
@@ -340,8 +341,8 @@
                 </div>
 
                 <div class="course-card">
-                    <h3>Пробный урок</h3>
-                    <div class="price">54,000 ₸</div>
+                    <h3 class="course-title">Пробный урок</h3>
+                    <div class="price course-price">54,000 ₸</div>
                     <ul class="course-features">
                         <li>• Первый шаг к вашему голосу</li>
                     </ul>
@@ -357,21 +358,21 @@
             <h2 class="section-title">Трансформационная игра "Мелодия души"</h2>
             <div class="game-grid">
                 <div class="game-card">
-                    <h3>Индивидуальная игра</h3>
+                    <h3 class="card-title">Индивидуальная игра</h3>
                     <div class="price">108,000 ₸</div>
                     <p class="game-desc">Сеанс личного прорыва</p>
                     <button class="kaspi-button">Kaspi Pay</button>
                 </div>
 
                 <div class="game-card">
-                    <h3>Групповая игра</h3>
+                    <h3 class="card-title">Групповая игра</h3>
                     <div class="price">54,000 ₸</div>
                     <p class="game-desc">Энергия коллектива</p>
                     <button class="kaspi-button">Kaspi Pay</button>
                 </div>
 
                 <div class="game-card featured">
-                    <h3>Обучение игре</h3>
+                    <h3 class="card-title">Обучение игре</h3>
                     <div class="price">1,200,000 ₸</div>
                     <p class="game-desc">Станьте ведущим трансформаций</p>
                     <button class="kaspi-button">Kaspi Pay</button>
