--- a/index.html
+++ b/index.html
@@ -240,6 +240,34 @@
         </div>
     </section>
 
+    <!-- About Rada Section -->
+<section id="about" class="about-rada">
+    <div class="container about-grid">
+        
+        <div class="about-photo">
+            <img src="rada.jpg" alt="Рада Аубакирова">
+        </div>
+
+        <div class="about-content">
+            <h2>Рада Аубакирова</h2>
+            <p class="about-sub">
+                Основательница международной школы терапевтического вокала.
+            </p>
+
+            <p class="about-text">
+                Более 20 лет Рада помогает людям раскрывать голос, находить внутреннюю свободу и уверенность.
+                Её авторский подход объединяет вокальную технику, психологию, дыхательные практики и работу с телом.
+            </p>
+
+            <p class="about-text">
+                Сегодня школа Рады обучает студентов по всему миру — от новичков до профессиональных артистов,
+                помогая каждому услышать свой настоящий голос.
+            </p>
+        </div>
+
+    </div>
+</section>
+
     <!-- Why Choose Us -->
     <section class="why-choose">
         <div class="container">
