--- a/index.html
+++ b/index.html
@@ -223,11 +223,20 @@
             Голос, который услышат. Уверенность. Сцена. Признание.
         </p>
 
-        <ul class="hero-list">
-            <li>🎤 Освобождение голоса</li>
-            <li>✨ Уверенность в себе</li>
-            <li>🎭 Сценическая свобода</li>
-        </ul>
+<div class="benefits-list">
+    <div class="benefit-item">
+        <span class="bullet"></span>
+        <span>Освобождение голоса</span>
+    </div>
+    <div class="benefit-item">
+        <span class="bullet"></span>
+        <span>Уверенность в себе</span>
+    </div>
+    <div class="benefit-item">
+        <span class="bullet"></span>
+        <span>Сценическая свобода</span>
+    </div>
+</div>
 
         <button class="cta-button">Записаться</button>
     </section>
