--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <section id="about" class="section compact">
       <div class="wrap about-grid">
         <div class="about-photo">
-          <img src="images/rada.jpg" alt="Рада Аубакирова" class="rada-photo">
+          <img src="rada.jpg" alt="Рада Аубакирова" class="rada-photo">
         </div>
         <div class="about-content">
           <h2>Рада Аубакирова</h2>
