--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <!-- HEADER -->
   <header class="header" role="banner">
     <div class="wrap">
-      <a class="brand" href="#hero" aria-label="Rada Vocal">
-        <img src="logo.png" alt="Rada Vocal" class="brand-logo">
-      </a>
+<a class="brand" href="#hero" aria-label="Rada Vocal">
+  Rada Vocal
+</a>
 
       <nav class="nav" aria-label="Main navigation">
         <a href="#courses">Курсы</a>
