--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
       </div>
     </section>
 
+    <!-- ВСТАВЛЕННЫЙ ПАТЧ: Courses Cover -->
+    <section class="courses-cover">
+      <div class="container">
+        <h2 class="courses-cover-title">Терапевтический вокал — курсы</h2>
+        <p class="courses-cover-subtitle">
+          Выберите формат обучения, который поможет раскрыть голос и уверенность
+        </p>
+      </div>
+    </section>
+
     <!-- Courses -->
     <section id="courses" class="section compact">
       <div class="wrap">
