--- a/index.html
+++ b/index.html
@@ -112,62 +112,95 @@
         </div>
 
         <div class="courses-grid">
+          <!-- Премиум формат -->
           <div class="course-card premium">
-            <h3 class="course-title">Премиум формат (индивидуально)</h3>
+            <div class="course-title-wrapper">
+              <h3 class="course-title">Премиум формат (индивидуально)</h3>
+            </div>
             <div class="course-price">990 000 ₸</div>
-            <ul class="course-features">
-              <li>Максимальное внимание</li>
-              <li>Дыхание, подача, диапазон</li>
-              <li>Снятие голосовых и телесных зажимов</li>
-            </ul>
-            <button class="kaspi-button">Оплатить через Kaspi</button>
+            <p class="course-desc">
+              Максимальное внимание<br>
+              Дыхание, подача, диапазон<br>
+              Снятие голосовых и телесных зажимов
+            </p>
+            <a class="kaspi-button" href="https://kaspi.kz">
+              Оплатить через Kaspi
+            </a>
           </div>
 
+          <!-- VIP группа -->
           <div class="course-card">
-            <h3 class="course-title">VIP группа (до 5)</h3>
+            <div class="course-title-wrapper">
+              <h3 class="course-title">VIP группа (до 5)</h3>
+            </div>
             <div class="course-price">495 000 ₸</div>
-            <ul class="course-features">
-              <li>Почти индивидуально</li>
-              <li>Психология голоса</li>
-            </ul>
-            <button class="kaspi-button">Kaspi Pay</button>
+            <p class="course-desc">
+              Почти индивидуально<br>
+              Психология голоса
+            </p>
+            <a class="kaspi-button" href="https://kaspi.kz">
+              Оплатить через Kaspi
+            </a>
           </div>
 
+          <!-- Группа -->
           <div class="course-card">
-            <h3 class="course-title">Группа (до 10)</h3>
+            <div class="course-title-wrapper">
+              <h3 class="course-title">Группа (до 10)</h3>
+            </div>
             <div class="course-price">350 000 ₸</div>
-            <ul class="course-features">
-              <li>Практика в группе</li>
-              <li>Преодоление барьеров</li>
-            </ul>
-            <button class="kaspi-button">Kaspi Pay</button>
+            <p class="course-desc">
+              Практика в группе<br>
+              Преодоление барьеров
+            </p>
+            <a class="kaspi-button" href="https://kaspi.kz">
+              Оплатить через Kaspi
+            </a>
           </div>
 
+          <!-- Пары -->
           <div class="course-card">
-            <h3 class="course-title">Пары</h3>
+            <div class="course-title-wrapper">
+              <h3 class="course-title">Пары</h3>
+            </div>
             <div class="course-price">1 200 000 ₸</div>
-            <ul class="course-features">
-              <li>Гармония в голосе</li>
-            </ul>
-            <button class="kaspi-button">Kaspi Pay</button>
+            <p class="course-desc">
+              Гармония в голосе и отношениях
+            </p>
+            <a class="kaspi-button" href="https://kaspi.kz">
+              Оплатить через Kaspi
+            </a>
           </div>
 
+          <!-- Полный курс -->
           <div class="course-card featured">
-            <h3 class="course-title">Полный курс — Трансформация</h3>
+            <div class="course-title-wrapper">
+              <h3 class="course-title">Полный курс — Трансформация</h3>
+            </div>
             <div class="course-price">2 200 000 ₸</div>
-            <ul class="course-features">
-              <li>Полная программа</li>
-            </ul>
-            <button class="kaspi-button">Kaspi Pay</button>
+            <p class="course-desc">
+              Полная программа<br>
+              Глубинная работа с голосом<br>
+              Личный ментор на всем пути
+            </p>
+            <a class="kaspi-button" href="https://kaspi.kz">
+              Оплатить через Kaspi
+            </a>
           </div>
 
+          <!-- Пробный урок -->
           <div class="course-card">
-            <h3 class="course-title">Пробный урок</h3>
+            <div class="course-title-wrapper">
+              <h3 class="course-title">Пробный урок</h3>
+            </div>
             <div class="course-price">54 000 ₸</div>
-            <ul class="course-features">
-              <li>Первый шаг к вашему голосу</li>
-            </ul>
-            <button class="kaspi-button">Записаться</button>
+            <p class="course-desc">
+              Первый шаг к вашему голосу<br>
+              Диагностика и рекомендации
+            </p>
+            <a class="kaspi-button" href="https://kaspi.kz">
+              Оплатить через Kaspi
+            </a>
           </div>
         </div>
       </div>
