--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
           <article class="feature-card">
             <div class="feature-icon">🌍</div>
-            <h3>Ученик по всему миру</h3>
+            <h3>Ученики по всему миру</h3>
             <p>Сотни трансформаций, международные достижения и выступления.</p>
           </article>
         </div>
@@ -216,7 +216,7 @@
         <div class="about-content">
           <h2>Рада Аубакирова</h2>
           <div class="about-sub">Основатель Международной школы терапевтического вокала</div>
-          <p class="about-text">Автор уникальной методики работы с голосом через тело и психику. Более 10 лет практики, сотни трансформаций: артисты, спикеры, педагоги и люди, стремящиеся к истинному звучанию.</p>
+          <p class="about-text">Автор уникальной методики работы с голосом через тело и психику. Более 20 лет практики, сотни трансформаций: артисты, спикеры, педагоги и люди, стремящиеся к истинному звучанию.</p>
           <a href="#contact" class="cta-button small" data-scroll="#contact">Записаться на консультацию</a>
         </div>
       </div>
